[tool.poetry]
name = "webtoon_downloader"
version = "0.1.0"
description = "Downloads webtoons"
authors = ["Nick Yang <guppy0130@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["webtoon"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
rich = "^12.6.0"
Pillow = "^9.3.0"
lxml = "^4.9.2"
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
pre-commit = "^2.20.0"
isort = "^5.11.3"
flake8-bugbear = "^22.12.6"
flake8-comprehensions = "^3.10.1"
flake8-simplify = "^0.19.3"
flake8-builtins = "^2.0.1"

[tool.poetry.scripts]
webtoon-downloader = "webtoon_downloader.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
